crates/next-custom-transforms/tests/errors/react-server-components/server-graph/react-dom-api/output.js
import {  flushSync, unstable_batchedUpdates } from 'react-dom';
import { useActionState } from 'react'
import { useFormStatus, useFormState } from 'react-dom';
export default function() {
    return null;
}
